--- a/data/Page.html
+++ b/data/Page.html
@@ -96,10 +96,10 @@
         border-radius: 20px;
         border: 4px solid #ffff;
         border: none;
-        padding: 20px;
-        padding-bottom: 28px;
+        /*padding: 20px;*/
+        /*padding-bottom: 28px;*/
         width: 240px;
-        height: 20px;
+        height: 50px;
         margin-bottom: 10%;
     }
     
